--- a/albums/templates/albums/base.html
+++ b/albums/templates/albums/base.html
@@ -4,7 +4,8 @@
 
 <head>
     <title>Albums</title>
-    <link rel="stylesheet" href="https://unpkg.com/tachyons@4.12.0/css/tachyons.min.css">
+    <!-- <link rel="stylesheet" href="https://unpkg.com/tachyons@4.12.0/css/tachyons.min.css"> -->
+    <!-- <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/picnic"> -->
     <link rel="stylesheet" href="{% static 'css/albums.css' %}">
 </head>
 
@@ -14,7 +15,7 @@
             <a href="{% url 'album_new' %}" class="top-menu">
                 {% include './icons/file-earmark-plus.svg' %}
             </a>
-            <h1><a href="/">Albums!</a></h1>
+            <h1><a href="/">OK Computer School</a></h1>
         </div>
     </header>
     
