--- a/albums/static/css/albums.css
+++ b/albums/static/css/albums.css
@@ -1,35 +1,35 @@
 .page-header {
-    background-color: #111425;
+    background-color: #000000;
     margin-top: 0;
     margin-bottom: 40px;
-    padding: 10px 10px 10px 40px;
+    padding: 10px 10px 10px 20px;
 }
 
 .page-header h1,
 .page-header h1 a,
 .page-header h1 a:visited,
 .page-header h1 a:active {
-    color: #ffffff;
+    color: #c25353;
     font-size: 36pt;
     text-decoration: none;
 }
 
-h1,
-h2,
-h3,
-h4 { font-family: 'avenir next', avenir, sans-serif; }
+
 
 .date {
     color: #828282;
 }
 
-.save {
-    float: right;
+.actions {
+    margin-right: 20px;
+    font-family: 'avenir next', sans-serif; color: #000000;
+    font-size: 10pt;
 }
 
-.post-form textarea,
-.post-form input {
-    width: 100%;
+
+.album-form textarea,
+.album-form input {
+    width: 40%;
 }
 
 .top-menu,
@@ -41,28 +41,70 @@ h4 { font-family: 'avenir next', avenir, sans-serif; }
     margin-right: 20px;
 }
 
-.post {
-    margin-bottom: 70px;
-}
-
-.post h2 a,
-.post h2 a:visited {
+.album a,
+.album a:visited,
+.artist a,
+.artist a:visited {
     color: #000000;
+    margin-right: 20px;
 }
 
-.post > .date,
-.post > .actions {
+.album a:hover,
+.artist a:hover {
+    color: #888888;
+}
+
+.album > .date,
+.album > .actions,
+.artist > .actions {
     float: right;
 }
 
 .btn-default,
-.btn-default:visited {
-    color: #C25100;
+.btn-default:visited,
+.save {
+    color: #000000;
     background: none;
     border-color: #C25100;
+    float: right;
+    padding: 10px 10px 10px 10px;
+    margin-right: 20px;
 }
+
 
 .btn-default:hover {
     color: #FFFFFF;
-    background-color: #C25100;
+    background-color: #000000;
+}
+
+
+.post-form {
+    font-family: 'avenir next', sans-serif; color: #000000;
+    margin-left: 20px; margin-top: 40px; font-size:10pt; align-items: left;}
+
+    
+a:link { text-decoration: none; }
+a:visited { text-decoration: none; }
+a:active { text-decoration: none; }
+    
+
+    
+h1 {
+    font-family: 'avenir next', avenir, sans-serif; color: #000000;
+
+}
+
+
+h2,
+h3 {
+    font-family: 'avenir next', avenir, sans-serif; color: #000000;
+    margin-left: 20px; margin-bottom: -10px; font-size:16pt;}
+    
+h4,
+h5 {
+    font-family: 'avenir next', avenir, sans-serif; color: #c25353;
+    margin-left: 20px; margin-right: 20px; margin-bottom: -10px; font-size:smaller;}
+
+.artist {
+    color: #c25353;
 }
