--- a/albums/templates/albums/album_detail.html
+++ b/albums/templates/albums/album_detail.html
@@ -1,17 +1,35 @@
 {% extends 'albums/base.html' %}
 
 {% block content %}
-    <article class='album'>
-        <aside class="actions">
-            {% if user.is_authenitcated %}
-                <a class="btn btn-default" href="{% url 'album_edit' pk=album.pk %}">
-                    {% include './icons/pencil-fill.svg' %}
-                </a>
-            {% endif %}
-        </aside>
-        <h2>{{ album.title }}</h2>
-        <p>{{ album.artist|linebreaksbr }}</p>
-        <!-- <p>{{ album.created_at }}</p> -->
+<article class="album">
+    <aside class="actions">
+        {% if user.is_authenticated %}
+        <a class="btn btn-default" href="{% url 'album_edit' pk=album.pk %}">
+            {% include './icons/pencil-fill.svg' %} change it
+        </a>
+        <a class="btn btn-default" href="{% url 'album_delete' pk=album.pk %}"
+            onclick="return confirm('Sure bout that?')">
+            {% include './icons/trash.svg' %} trash it
+        </a>
+        <a class="btn btn-default" href="{% url 'album_favorite' pk=album.pk %}"
+            onclick="return confirm('One of your favorites?')">
+            {% include './icons/star.svg' %} favorite
+        </a>
+        {% endif %}
+    </aside>
 
-    </article>
-{% endblock %} 
+    <h2>{{ album.title }}</h2>
+    <h4><a href="{% url 'artist_page' pk=album.artist.pk %}">{{ album.artist }}</h4></a>
+    <h5>{{ album.year }}</h5>
+    <h5>
+        {% if album.favorite == True %}
+        <a href="{% url 'album_not_favorite' pk=album.pk %}" onclick="return confirm('Not one of your favorites?')">
+            {% include './icons/star-fill.svg' %}</a>
+        {% elif album.favorite == False %}
+        <a href="{% url 'album_favorite' pk=album.pk %}" onclick="return confirm('One of your favorites?')">
+            {% include './icons/star.svg' %}</a>
+        {% endif %}
+    </h5>
+
+</article>
+{% endblock %}
