--- a/albums/static/css/albums.css
+++ b/albums/static/css/albums.css
@@ -1,7 +1,9 @@
+/* @import "https://cdn.jsdelivr.net/npm/bulma@0.9.3/css/bulma.min.css"; */
+
 .page-header {
     background-color: #000000;
     margin-top: 0;
-    margin-bottom: 40px;
+    margin-bottom: 30px;
     padding: 10px 10px 10px 20px;
 }
 
@@ -10,7 +12,8 @@ body {
 }
 
 
-.page-header h1,
+
+.page-header h1
 .page-header h1 a,
 .page-header h1 a:visited,
 .page-header h1 a:active {
@@ -25,11 +28,7 @@ body {
     color: #828282;
 }
 
-.actions {
-    margin-right: 20px;
-    font-family: 'avenir next', sans-serif; color: #000000;
-    font-size: 10pt;
-}
+
 
 
 .album-form textarea,
@@ -44,6 +43,7 @@ body {
     float: right;
     font-size: 26pt;
     margin-right: 20px;
+    text-align: center;
 }
 
 .album a,
@@ -56,7 +56,105 @@ body {
 
 .album a:hover,
 .artist a:hover {
-    color: #888888;
+    color: #fff7ec;
+}
+
+.wrapper {
+    display:grid;
+    grid-template-columns: 5fr 1fr;
+    grid-template-rows: auto;
+    /* align-items: stretch; */
+    /* justify-content: space-evenly; */
+    /* align-content: space-around; */
+    grid-gap: 20px;
+    /* grid-template-areas: 
+    "albums albums albums albums albums nav_bar"; */
+    /* border: 10px solid #fff7ec; */
+    /* grid-auto-rows: 100%; */
+}
+
+.albums {
+    display:grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+    grid-template-rows: auto;
+    /* align-items: stretch; */
+    justify-content: space-evenly;
+    align-content: space-around;
+    grid-gap: 20px;
+    /* display:grid; */
+    /* grid-template-columns: 1fr 1fr 1fr; */
+    /* grid-row-gap: 20px; */
+    /* grid-area: albums; */
+    /* display:flex; */
+    /* width: auto;
+    flex:1 auto; */
+    /* flex-grow: 1; */
+    /* flex-basis: auto; */
+    /* flex-direction: row; */
+    /* grid-template-columns: 1fr 1fr 1fr; */
+    /* margin-right: 60px; */
+}
+.album {
+    background-color: #d37f7f;
+    /* justify-content: space-evenly;
+    align-content: space-around; */
+    /* flex:1 auto; */
+    /* grid-template-columns: 1fr 1fr 1fr 1fr 1fr; */
+    /* grid-template-rows: 1fr; */
+    /* grid-area: albums;  */
+    /* grid-row-gap: 20px; */
+    /* border-bottom: 20px solid #fff7ec; */
+    font-family: 'avenir next', sans-serif; color: #000000;
+    /* height: 175px; */
+    /* margin: 10px; */
+    /* align-self: baseline; */
+    
+}
+
+
+.nav_bar {  
+    /* align-self: flex-start; */
+    /* grid-column-start: span; */
+    /* grid-area: nav_bar; */
+    color: black;
+    background-color: rgb(211, 211, 211);
+    text-decoration: none;
+    text-align: right;
+    border-bottom: 20px solid #fff7ec;
+    /* margin-right: 20px; */
+    /* margin-top: 10px; */
+    padding: 10px 10px 10px 10px;
+    /* border: 2px solid black */
+}
+
+.side_bar {
+    /* margin-right: 20px; */
+    font-family: 'avenir next', sans-serif; color: #000000;
+    font-size: 10pt;
+    text-align: right;
+    padding: 10px 10px 15px 10px;
+    border-bottom: 20px solid #fff7ec;
+    /* margin-top: 20px;
+    margin-top: 10px; */
+    background-color: rgb(211, 211, 211);
+    /* border: 10px solid black; */
+}
+
+.actions {
+    margin-right: 20px;
+    font-family: 'avenir next', sans-serif; color: #000000;
+    font-size: smaller;
+    float: right;
+    padding: 10px 0px 10px 0px;
+    /* border-bottom: 20px solid #fff7ec; */
+    /* margin-top: 20px;
+    margin-top: 10px; */
+    background-color: rgb(211, 211, 211);
+    /* border: 10px solid black; */
+}
+
+.actions > a:visited {
+    color:black;
 }
 
 .album > .date,
@@ -72,8 +170,9 @@ body {
     background: none;
     border-color: #C25100;
     float: right;
-    padding: 10px 10px 10px 10px;
+    padding: 10px 0px 10px 40px;
     margin-right: 20px;
+
 }
 
 
@@ -84,8 +183,16 @@ body {
 
 
 .post-form {
+    display:grid;
+    /* grid-template-columns: auto; */
+    background-color: #d37f7f;
+    padding: 10px 10px 10px 10px;
     font-family: 'avenir next', sans-serif; color: #000000;
-    margin-left: 20px; margin-top: 40px; font-size:10pt; align-items: left;}
+    /* margin-left: 20px; */
+    /* margin-top: 40px; */
+    font-size:10pt;
+    /* border-bottom: 20px solid #fff7ec; */
+    align-items: left;}
 
     
 a:link { text-decoration: none; }
@@ -94,22 +201,44 @@ a:active { text-decoration: none; }
     
 
     
-h1 {
-    font-family: 'avenir next', avenir, sans-serif; color: #000000;
+h1,
+h1 a {
+    font-family: 'avenir next', avenir, sans-serif; color: #c25353;
+    font-size: 36pt;
+    text-decoration: none;
 
 }
 
 
 h2,
 h3 {
-    font-family: 'avenir next', avenir, sans-serif; color: #000000;
-    margin-left: 20px; margin-bottom: -10px; font-size:16pt;}
+    font-family: 'avenir next', avenir; color: #000000;
+    margin-left: 20px;
+}
     
 h4,
 h5 {
-    font-family: 'avenir next', avenir, sans-serif; color: #c25353;
-    margin-left: 20px; margin-right: 20px; margin-bottom: -10px; font-size:smaller;}
+    font-family: 'avenir next', avenir, sans-serif; color: rgb(211, 211, 211);
+    margin-left: 20px; margin-right: 20px; font-size:smaller;}
+
+h6 {
+    padding: 10px 10px 10px 10px;
+    font-size:smaller;
+}
 
 .artist {
-    color: #c25353;
+    /* color: #c25353; */
+    /* background-color: black; */
+    /* padding: 10px */
+    /* display:flex; */
+    /* flex-direction: column; */
+    /* flex:1 auto; */
+    color: black;
+    background-color: rgb(211, 211, 211);
+    text-decoration: none;
+    text-align: right;
+    font-size: xx-large;
+    margin-top: -15px;
+    padding: 10px 10px 15px 0px;
+
 }
