--- a/albums/templates/albums/album_detail.html
+++ b/albums/templates/albums/album_detail.html
@@ -1,23 +1,8 @@
 {% extends 'albums/base.html' %}
 
 {% block content %}
-<article class="album">
-    <aside class="actions">
-        {% if user.is_authenticated %}
-        <a class="btn btn-default" href="{% url 'album_edit' pk=album.pk %}">
-            {% include './icons/pencil-fill.svg' %} change it
-        </a>
-        <a class="btn btn-default" href="{% url 'album_delete' pk=album.pk %}"
-            onclick="return confirm('Sure bout that?')">
-            {% include './icons/trash.svg' %} trash it
-        </a>
-        <a class="btn btn-default" href="{% url 'album_favorite' pk=album.pk %}"
-            onclick="return confirm('One of your favorites?')">
-            {% include './icons/star.svg' %} favorite
-        </a>
-        {% endif %}
-    </aside>
-
+<div class="albums">
+    <article class="album">
     <h2>{{ album.title }}</h2>
     <h4><a href="{% url 'artist_page' pk=album.artist.pk %}">{{ album.artist }}</h4></a>
     <h5>{{ album.year }}</h5>
@@ -31,5 +16,22 @@
         {% endif %}
     </h5>
 
+    </article>
+</div>
+<aside class="side_bar">
+        {% if user.is_authenticated %}
+        <a class="btn btn-default" href="{% url 'album_edit' pk=album.pk %}">
+            {% include './icons/pencil-fill.svg' %} change it
+        </a><br>
+        <a class="btn btn-default" href="{% url 'album_delete' pk=album.pk %}"
+            onclick="return confirm('Sure bout that?')">
+            {% include './icons/trash.svg' %} trash it
+        </a><br>
+        <a class="btn btn-default" href="{% url 'album_favorite' pk=album.pk %}"
+            onclick="return confirm('One of your favorites?')">
+            {% include './icons/star.svg' %} favorite
+        </a>
+        {% endif %}
+    </aside>
 </article>
 {% endblock %}
