--- a/albums/templates/albums/create_artist.html
+++ b/albums/templates/albums/create_artist.html
@@ -9,7 +9,7 @@
     <h3>add album</h3>
     <h6>{{ form.as_p }}</h6>
 </form>
+<button type='submit' class='save btn btn-save'>Save</button>
 </article>
-<button type='submit' class='save btn btn-default'>Save</button>
 
 {% endblock %}
