--- a/albums/static/css/albums.css
+++ b/albums/static/css/albums.css
@@ -28,6 +28,10 @@ body {
     color: #828282;
 }
 
+.little_buttons {
+    display: flex;
+    align-items: right;
+}
 
 
 
@@ -61,83 +65,56 @@ body {
 
 .wrapper {
     display:grid;
-    grid-template-columns: 5fr 1fr;
     grid-template-rows: auto;
-    /* align-items: stretch; */
-    /* justify-content: space-evenly; */
-    /* align-content: space-around; */
     grid-gap: 20px;
-    /* grid-template-areas: 
-    "albums albums albums albums albums nav_bar"; */
-    /* border: 10px solid #fff7ec; */
-    /* grid-auto-rows: 100%; */
+
 }
 
 .albums {
     display:grid;
-    grid-template-columns: 1fr 1fr 1fr 1fr;
+    grid-template-columns: repeat(4, 1fr);
     grid-template-rows: auto;
-    /* align-items: stretch; */
+    align-items: stretch;
     justify-content: space-evenly;
     align-content: space-around;
     grid-gap: 20px;
-    /* display:grid; */
-    /* grid-template-columns: 1fr 1fr 1fr; */
-    /* grid-row-gap: 20px; */
-    /* grid-area: albums; */
-    /* display:flex; */
-    /* width: auto;
-    flex:1 auto; */
-    /* flex-grow: 1; */
-    /* flex-basis: auto; */
-    /* flex-direction: row; */
-    /* grid-template-columns: 1fr 1fr 1fr; */
-    /* margin-right: 60px; */
+
 }
 .album {
     background-color: #d37f7f;
-    /* justify-content: space-evenly;
-    align-content: space-around; */
-    /* flex:1 auto; */
-    /* grid-template-columns: 1fr 1fr 1fr 1fr 1fr; */
-    /* grid-template-rows: 1fr; */
-    /* grid-area: albums;  */
-    /* grid-row-gap: 20px; */
-    /* border-bottom: 20px solid #fff7ec; */
     font-family: 'avenir next', sans-serif; color: #000000;
-    /* height: 175px; */
-    /* margin: 10px; */
-    /* align-self: baseline; */
+
     
 }
 
 
 .nav_bar {  
-    /* align-self: flex-start; */
-    /* grid-column-start: span; */
-    /* grid-area: nav_bar; */
     color: black;
     background-color: rgb(211, 211, 211);
-    text-decoration: none;
-    text-align: right;
+    /* text-decoration: none; */
+    display:flex;
+    align-items: center;
+    justify-content: right;
+    text-align:right;
     border-bottom: 20px solid #fff7ec;
-    /* margin-right: 20px; */
-    /* margin-top: 10px; */
     padding: 10px 10px 10px 10px;
-    /* border: 2px solid black */
+    height: 65px;
+    align-content: center;
 }
 
 .side_bar {
-    /* margin-right: 20px; */
     font-family: 'avenir next', sans-serif; color: #000000;
     font-size: 10pt;
-    text-align: right;
-    padding: 10px 10px 15px 10px;
+    display:flex;
+    align-items: center;
+    justify-content: right;
+    /* text-align: right; */
+    padding: 10px 10px 10px 10px;
     border-bottom: 20px solid #fff7ec;
-    /* margin-top: 20px;
-    margin-top: 10px; */
+    height: 65px;
+    /* text-align: center; */
     background-color: rgb(211, 211, 211);
-    /* border: 10px solid black; */
+
 }
 
 .actions {
@@ -145,16 +122,16 @@ body {
     font-family: 'avenir next', sans-serif; color: #000000;
     font-size: smaller;
     float: right;
-    padding: 10px 0px 10px 0px;
-    /* border-bottom: 20px solid #fff7ec; */
-    /* margin-top: 20px;
-    margin-top: 10px; */
+    padding: 10px 0px 10px 10px;
     background-color: rgb(211, 211, 211);
-    /* border: 10px solid black; */
 }
 
 .actions > a:visited {
     color:black;
+}
+
+.actions > a:hover {
+    color: #fff7ec;
 }
 
 .album > .date,
@@ -164,34 +141,48 @@ body {
 }
 
 .btn-default,
-.btn-default:visited,
-.save {
+.btn-default:visited {
     color: #000000;
     background: none;
     border-color: #C25100;
     float: right;
-    padding: 10px 0px 10px 40px;
+    padding: 10px 0px 10px 10px;
     margin-right: 20px;
+}
 
+.save {
+    color: #000000;
+    background: rgb(211, 211, 211);
+    border-color: #C25100;
+    float: right;
+    width: 50px;
+    /* padding: 10px 0px 10px 10px; */
+    margin: 20px; 
 }
 
 
 .btn-default:hover {
     color: #FFFFFF;
-    background-color: #000000;
+    /* background-color: #000000; */
 }
 
+.btn-album {
+    color: #000000;
+    background: none;
+    border-color: #C25100;
+    float: right;
+    padding: 10px 0px 10px 10px;
+    /* margin-right: 20px; */
+
+}
 
 .post-form {
     display:grid;
-    /* grid-template-columns: auto; */
     background-color: #d37f7f;
-    padding: 10px 10px 10px 10px;
+    padding: 10px 0px 0px 10px;
     font-family: 'avenir next', sans-serif; color: #000000;
-    /* margin-left: 20px; */
-    /* margin-top: 40px; */
     font-size:10pt;
-    /* border-bottom: 20px solid #fff7ec; */
+    margin-left: 20px;
     align-items: left;}
 
     
@@ -214,31 +205,30 @@ h2,
 h3 {
     font-family: 'avenir next', avenir; color: #000000;
     margin-left: 20px;
+
 }
     
 h4,
 h5 {
     font-family: 'avenir next', avenir, sans-serif; color: rgb(211, 211, 211);
-    margin-left: 20px; margin-right: 20px; font-size:smaller;}
+    margin-left: 20px;
+    /* margin-right: 20px; */
+    font-size:smaller;}
 
 h6 {
-    padding: 10px 10px 10px 10px;
+    /* padding: 0px 10px 10px 10px; */
     font-size:smaller;
+    margin-left: 20px;
 }
 
 .artist {
-    /* color: #c25353; */
-    /* background-color: black; */
-    /* padding: 10px */
-    /* display:flex; */
-    /* flex-direction: column; */
-    /* flex:1 auto; */
     color: black;
     background-color: rgb(211, 211, 211);
     text-decoration: none;
     text-align: right;
+    text-justify: center;
     font-size: xx-large;
-    margin-top: -15px;
-    padding: 10px 10px 15px 0px;
+    /* margin-top: -15px; */
+    /* padding: 10px 10px 10px 0px; */
 
 }
