--- a/albums/static/css/oldalbums.css
+++ b/albums/static/css/oldalbums.css
@@ -3,7 +3,7 @@
 .page-header {
     background-color: #000000;
     margin-top: 0;
-    margin-bottom: 40px;
+    margin-bottom: 30px;
     padding: 10px 10px 10px 20px;
 }
 
@@ -24,11 +24,11 @@ body {
 
 
 
-.actions {
-    margin-right: 20px;
-    font-family: 'avenir next', sans-serif; color: #000000;
-    font-size: 10pt;
+.date {
+    color: #828282;
 }
+
+
 
 
 .album-form textarea,
@@ -43,6 +43,7 @@ body {
     float: right;
     font-size: 26pt;
     margin-right: 20px;
+    text-align: center;
 }
 
 .album a,
@@ -54,46 +55,107 @@ body {
 }
 
 .album a:hover,
-.artist a:hover {
+.artist a:hover,
+.actions > a:hover {
     color: #fff7ec;
 }
 
-.is-fluid {
+.wrapper {
     display:grid;
-    grid-template-columns: 5fr 1fr;
-}
-
-.album {
-    /* flex:1 auto; */
-    
-    border: 10px solid #fff7ec;
-    font-family: 'avenir next', sans-serif; color: #000000;
-    align-self: baseline;
-    
+    /* grid-template-columns: 5fr 1fr; */
+    grid-template-rows: auto;
+    /* align-items: stretch; */
+    /* justify-content: space-evenly; */
+    /* align-content: space-around; */
+    grid-gap: 20px;
+    /* grid-template-areas: 
+    "albums albums albums albums albums nav_bar"; */
+    /* border: 10px solid #fff7ec; */
+    /* grid-auto-rows: 100%; */
 }
 
 .albums {
-
+    display:grid;
+    grid-template-columns: repeat(4, 1fr);
+    grid-template-rows: auto;
+    align-items: stretch;
+    justify-content: space-evenly;
+    align-content: space-around;
+    grid-gap: 20px;
+    /* display:grid; */
+    /* grid-template-columns: 1fr 1fr 1fr; */
+    /* grid-row-gap: 20px; */
+    /* grid-area: albums; */
     /* display:flex; */
     /* width: auto;
     flex:1 auto; */
     /* flex-grow: 1; */
     /* flex-basis: auto; */
     /* flex-direction: row; */
-    background-color: #d37f7f;
+    /* grid-template-columns: 1fr 1fr 1fr; */
     /* margin-right: 60px; */
 }
+.album {
+    background-color: #d37f7f;
+    /* justify-content: space-evenly;
+    align-content: space-around; */
+    /* flex:1 auto; */
+    /* grid-template-columns: 1fr 1fr 1fr 1fr 1fr; */
+    /* grid-template-rows: 1fr; */
+    /* grid-area: albums;  */
+    /* grid-row-gap: 20px; */
+    /* border-bottom: 20px solid #fff7ec; */
+    font-family: 'avenir next', sans-serif; color: #000000;
+    /* height: 175px; */
+    /* margin: 10px; */
+    /* align-self: baseline; */
+    
+}
+
 
 .nav_bar {  
     /* align-self: flex-start; */
     /* grid-column-start: span; */
+    /* grid-area: nav_bar; */
     color: black;
     background-color: rgb(211, 211, 211);
     text-decoration: none;
     text-align: right;
-    margin-top: 10px;
-    padding: 10px 0px 10px 10px;
+    border-bottom: 20px solid #fff7ec;
+    /* margin-right: 20px; */
+    /* margin-top: 10px; */
+    padding: 10px 10px 10px 10px;
     /* border: 2px solid black */
+}
+
+.side_bar {
+    /* margin-right: 20px; */
+    font-family: 'avenir next', sans-serif; color: #000000;
+    font-size: 10pt;
+    text-align: right;
+    padding: 10px 10px 15px 10px;
+    border-bottom: 20px solid #fff7ec;
+    /* margin-top: 20px;
+    margin-top: 10px; */
+    background-color: rgb(211, 211, 211);
+    /* border: 10px solid black; */
+}
+
+.actions {
+    margin-right: 20px;
+    font-family: 'avenir next', sans-serif; color: #000000;
+    font-size: smaller;
+    float: right;
+    padding: 10px 0px 10px 0px;
+    /* border-bottom: 20px solid #fff7ec; */
+    /* margin-top: 20px;
+    margin-top: 10px; */
+    background-color: rgb(211, 211, 211);
+    /* border: 10px solid black; */
+}
+
+.actions > a:visited {
+    color:black;
 }
 
 .album > .date,
@@ -109,8 +171,9 @@ body {
     background: none;
     border-color: #C25100;
     float: right;
-    padding: 10px 10px 10px 10px;
+    padding: 10px 0px 10px 40px;
     margin-right: 20px;
+
 }
 
 
@@ -121,8 +184,16 @@ body {
 
 
 .post-form {
+    display:grid;
+    /* grid-template-columns: auto; */
+    background-color: #d37f7f;
+    padding: 10px 10px 10px 10px;
     font-family: 'avenir next', sans-serif; color: #000000;
-    margin-left: 20px; margin-top: 40px; font-size:10pt; align-items: left;}
+    /* margin-left: 20px; */
+    /* margin-top: 40px; */
+    font-size:10pt;
+    /* border-bottom: 20px solid #fff7ec; */
+    align-items: left;}
 
     
 a:link { text-decoration: none; }
@@ -148,8 +219,13 @@ h3 {
     
 h4,
 h5 {
-    font-family: 'avenir next', avenir, sans-serif; color: #c25353;
-    margin-left: 20px; margin-right: 20px; margin-bottom: -10px; font-size:smaller;}
+    font-family: 'avenir next', avenir, sans-serif; color: rgb(211, 211, 211);
+    margin-left: 20px; margin-right: 20px; font-size:smaller;}
+
+h6 {
+    padding: 10px 10px 10px 10px;
+    font-size:smaller;
+}
 
 .artist {
     /* color: #c25353; */
@@ -162,7 +238,8 @@ h5 {
     background-color: rgb(211, 211, 211);
     text-decoration: none;
     text-align: right;
-    margin-top: 10px;
-    padding: 10px 0px 10px 10px;
+    font-size: xx-large;
+    margin-top: -15px;
+    padding: 10px 10px 15px 0px;
 
 }
