--- a/albums/templates/albums/album_edit.html
+++ b/albums/templates/albums/album_edit.html
@@ -5,7 +5,7 @@
     <form method='POST' class='post-form'>{% csrf_token %}
         {{ form.as_p }}
     </form>
+    <button type='submit' class='save btn btn-save'>Save</button>
 </article>
-    <button type='submit' class='save btn btn-default'>Save</button>
 
 {% endblock %}
