--- a/albums/templates/albums/album_list.html
+++ b/albums/templates/albums/album_list.html
@@ -1,7 +1,15 @@
 {% extends 'albums/base.html' %}
 
 {% block content %}
-
+<article class="nav_bar">
+    <aside class="actions">
+        sort by:<br>
+        <a href="{% url 'album_list' %}">artist // </a>
+        <a href="{% url 'album_list_title' %}">title // </a>
+        <a href="{% url 'album_list_year' %}">year // </a>
+        <a href="{% url 'album_list_favorite' %}">favs {% include './icons/star-fill.svg' %}</a>
+    </aside>
+</article>
 <div class="albums">
     {% for album in albums %}
         <article class="album">
@@ -14,37 +22,29 @@
             </h5>
             <h5>
                 {% if album.favorite == True %}
-                <a href="{% url 'album_not_favorite' pk=album.pk %}" onclick="return confirm('Not one of your favorites?')">
+                <a class="btn btn-album" href="{% url 'album_not_favorite' pk=album.pk %}" onclick="return confirm('Not one of your favorites?')">
                     {% include './icons/star-fill.svg' %}</a>
                     <!-- <br>
                     <br> -->
                 {% elif album.favorite == False %}
-                <a href="{% url 'album_favorite' pk=album.pk %}" onclick="return confirm('One of your favorites?')">
+                <a class="btn btn-album" href="{% url 'album_favorite' pk=album.pk %}" onclick="return confirm('One of your favorites?')">
                     {% include './icons/star.svg' %}</a>
                     <!-- <br>
                     <br> -->
                 {% endif %}
                 <!-- <br> -->
-                <a href="{% url 'album_delete' pk=album.pk %}"
+                <a class="btn btn-album" href="{% url 'album_delete' pk=album.pk %}"
                 onclick="return confirm('Sure bout that?')">
                 {% include './icons/trash.svg' %}
-                <a href="{% url 'album_edit' pk=album.pk %}">
+                <a class="btn btn-album" href="{% url 'album_edit' pk=album.pk %}">
                     {% include './icons/pencil-fill.svg' %}
-            </a><br>
+                </a><br>
             </h5>
         <!-- </div> -->
         </article>
     {% endfor %}
 </div>
-<article class="nav_bar">
-    <aside class="actions">
-        sort by:<br>
-        <a href="{% url 'album_list' %}">artist</a><br>
-        <a href="{% url 'album_list_title' %}">title</a><br>
-        <a href="{% url 'album_list_year' %}">year</a><br>
-        <a href="{% url 'album_list_favorite' %}">favs {% include './icons/star-fill.svg' %}</a>
-    </aside>
-</article>
+
 {% endblock %}
 
 
